--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,10 @@
     transform: rotate(360deg);
   }
 }
+
+/* custom bootstrap classes: */
+
+.col-centered {
+  float: none;
+  margin: 0 auto;
+}
